[cmake] remove variable DUNE_ALUGRID_LIBRARY
This variable was hard-wired to libdunealugrid.a. This causes errors when
building shared libraries. This patch fixes the issue by removing the variable
and adding the "dunealugrid" target to the LINK_LIBRARIES property of all
targets.


Former-commit-id: a1594d4f7fa48da24bd408c49a557743083315fb

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,25 +19,24 @@ set(examples_HEADERS adaptation.hh
 
 configure_file(alugrid.cfg ${CMAKE_CURRENT_BINARY_DIR}/alugrid.cfg COPYONLY)
 
-foreach( variant ball euler transport )
-  string( TOUPPER ${variant} variant_upper )
-  set( prog "main_${variant}" )
-  add_executable( ${prog} main.cc )
-  dune_target_enable_all_packages( ${prog} )
-  if( "${variant}" STREQUAL "ball" )
-    target_compile_definitions( ${prog} PRIVATE "${variant_upper};ALUGRID_COUNT_GLOBALCOMM" )
-  else()
-    target_compile_definitions( ${prog} PRIVATE "${variant_upper}" )
+foreach(variant ball euler transport)
+  string(TOUPPER ${variant} variant_upper)
+  add_executable(main_${variant} main.cc )
+  dune_target_enable_all_packages(main_${variant})
+  set_property(TARGET main_${variant} APPEND PROPERTY LINK_LIBRARIES dunealugrid)
+  target_compile_definitions(main_${variant} PRIVATE ${variant_upper})
+  if("${variant}" STREQUAL "ball")
+    target_compile_definitions(main_${variant} PRIVATE "ALUGRID_COUNT_GLOBALCOMM")
   endif()
-  target_compile_definitions( ${prog} PUBLIC "ALUGRID_CUBE" "GRIDDIM=3" "WORLDDIM=3" )
+  target_compile_definitions(main_${variant} PUBLIC "ALUGRID_CUBE" "GRIDDIM=3" "WORLDDIM=3")
 
-  foreach( type cube simplex conform )
-    string( TOUPPER ${type} type_upper )
-    foreach( dim RANGE 2 3 )
-      set( prog "main_${variant}_${type}_${dim}d" )
-      add_executable( ${prog} EXCLUDE_FROM_ALL main.cc )
-      target_compile_definitions( ${prog} PRIVATE "${variant_upper}" "ALUGRID_${type_upper}" "GRIDDIM=${dim}" "WORLDDIM=${dim}" )
-      dune_target_enable_all_packages( ${prog} )
+  foreach(type cube simplex conform)
+    string(TOUPPER ${type} type_upper)
+    foreach(dim RANGE 2 3)
+      add_executable(main_${variant}_${type}_${dim}d EXCLUDE_FROM_ALL main.cc)
+      target_compile_definitions(main_${variant}_${type}_${dim}d PRIVATE "${variant_upper}" "ALUGRID_${type_upper}" "GRIDDIM=${dim}" "WORLDDIM=${dim}")
+      dune_target_enable_all_packages(main_${variant}_${type}_${dim}d)
+      set_property(TARGET main_${variant}_${type}_${dim}d APPEND PROPERTY LINK_LIBRARIES dunealugrid)
     endforeach()
   endforeach()
 endforeach()
