--- a/examples/backuprestore/CMakeLists.txt
+++ b/examples/backuprestore/CMakeLists.txt
@@ -6,10 +6,10 @@ add_definitions("-DALUGRID_CUBE")
 add_definitions("-DGRIDDIM=3")
 add_definitions("-DWORLDDIM=3")
 
-if( NOT HAVE_ALUGRID )
+if(NOT HAVE_ALUGRID)
   add_executable(main_br main.cc)
-  #dune_target_link_libraries(main_br "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
-  dune_target_enable_all_packages( main_br )
-endif( NOT HAVE_ALUGRID  )
+  dune_target_enable_all_packages(main_br)
+  set_property(TARGET main_br APPEND PROPERTY LINK_LIBRARIES dunealugrid)
+endif()
 
 install(FILES ${examplesbr_HEADERS} DESTINATION ${examplesbrdir})
