--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,15 +1,15 @@
 set(SUBDIRS callback dgf loadbalance backuprestore communication testEfficiency)
 
 set(examplesdir  ${CMAKE_INSTALL_INCLUDEDIR}/examples)
-set(examples_HEADERS adaptation.hh  
-                     diagnostics.hh  
-                     paralleldgf.hh        
-                     problem-ball.hh   
+set(examples_HEADERS adaptation.hh
+                     diagnostics.hh
+                     paralleldgf.hh
+                     problem-ball.hh
                      problem-transport.hh
-                     datamap.hh     
-                     fvscheme.hh     
-                     piecewisefunction.hh  
-                     problem-euler.hh  
+                     datamap.hh
+                     fvscheme.hh
+                     piecewisefunction.hh
+                     problem-euler.hh
                      problem.hh)
 
 configure_file(alugrid.cfg ${CMAKE_CURRENT_BINARY_DIR}/alugrid.cfg COPYONLY)
@@ -24,7 +24,7 @@ foreach( variant ball euler transport )
   else()
     target_compile_definitions( ${prog} PRIVATE "${variant_upper}" )
   endif()
-  target_compile_definitions( ${prog} PUBLIC "ALUGRID_CUBE" "GRIDDIM=3" "WORLDDIM=3" )
+  target_compile_definitions( ${prog} PUBLIC "ALUGRID_CONFORM" "GRIDDIM=3" "WORLDDIM=3" )
 
   foreach( type cube simplex conform )
     string( TOUPPER ${type} type_upper )
