disable gridfactorycheck in test-alugrid, as it currently does not work with reorientatioN
Former-commit-id: b66fa2200cf9d51dd9ad763115e890f0153c51ca

--- a/examples/dgf/CMakeLists.txt
+++ b/examples/dgf/CMakeLists.txt
@@ -15,6 +15,14 @@ set( DGFS
   sb3d.dgf
   unitcube2d.dgf
   unitcube3d.dgf
+  tet.0.msh.dgf
+  tet.00.msh.dgf
+  tet.1.msh.dgf
+  tet.2.msh.dgf
+  tet.3.msh.dgf
+  tet.4.msh.dgf
+  tet.5.msh.dgf
+  tet.6.msh.dgf
 )
 
 foreach( dgf ${DGFS} )
