fix an issue whith python_install in case pip was not found
Former-commit-id: 84e40dbbbb489b06982271898d0a0a0e29cbcb98

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,9 @@ add_subdirectory(examples EXCLUDE_FROM_ALL)
 add_subdirectory(utils)
 
 if(NOT (${DUNE_COMMON_VERSION} VERSION_LESS 2.6))
-  dune_python_install_package(PATH "python")
+  if(DUNE_PYTHON_pip_FOUND)
+    dune_python_install_package(PATH "python")
+  endif()
 endif()
 
 
