added missing subdirectory command for the python subfolder in the CMakeLists.txt file
Former-commit-id: c4de90bd3790f74ec0d661003c460c6fc77f7f16

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory(utils)
 
 if(NOT (${DUNE_COMMON_VERSION} VERSION_LESS 2.6))
   if(DUNE_PYTHON_pip_FOUND)
+    add_subdirectory("python")
     dune_python_install_package(PATH "python")
   endif()
 endif()
