--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,20 +4,18 @@ before_script:
   - duneci-install-module https://gitlab.dune-project.org/core/dune-geometry.git
   - duneci-install-module https://gitlab.dune-project.org/core/dune-grid.git
 
+debian:10  gcc:c++17:
+  image: duneci/base:10
+  script: duneci-standard-test
+  variables: {DUNECI_OPTS: /duneci/opts.gcc.c++17}
+  tags: [duneci]
+
 debian:9--gcc:
   image: duneci/base:9
   script: duneci-standard-test
 
 debian:9--clang:
   image: duneci/base:9
-  script: duneci-standard-test --opts=/duneci/opts.clang
-
-debian:8--gcc:
-  image: duneci/base:8
-  script: duneci-standard-test
-
-debian:8-backports--clang:
-  image: duneci/base:8-backports
   script: duneci-standard-test --opts=/duneci/opts.clang
 
 ubuntu:16.04--gcc:
