--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,7 @@ before_script:
 
 debian:10  gcc:c++17:
   image: duneci/base:10
-  script: duneci-standard-test
-  variables: {DUNECI_OPTS: /duneci/opts.gcc.c++17}
-  tags: [duneci]
+  script: duneci-standard-test --opts=/duneci/opts.gcc.c++17}
 
 debian:9--gcc:
   image: duneci/base:9
