Added subdir quality.
Former-commit-id: eb3299e39c225e3285cb0ab8f8764870016c40cf

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(callback)
 add_subdirectory(communication)
 add_subdirectory(dgf)
 add_subdirectory(loadbalance)
+add_subdirectory(quality)
 add_subdirectory(testEfficiency)
 
 set(examplesdir  ${CMAKE_INSTALL_INCLUDEDIR}/examples)
