--- a/examples/quality/CMakeLists.txt
+++ b/examples/quality/CMakeLists.txt
@@ -12,4 +12,9 @@ foreach(variant quality)
   target_compile_definitions(main_${variant} PUBLIC "ALUGRID_CONFORM" "GRIDDIM=3" "WORLDDIM=3")
 endforeach()
 
+add_executable(gmsh2dgf gmsh2dgf.cc )
+dune_target_enable_all_packages(gmsh2dgf)
+set_property(TARGET gmsh2dgf APPEND PROPERTY LINK_LIBRARIES dunealugrid)
+target_compile_definitions(gmsh2dgf PUBLIC "ALUGRID_SIMPLEX" "GRIDDIM=3" "WORLDDIM=3")
+
 install(FILES ${examples_HEADERS} DESTINATION ${examplesdir})
