--- a/examples/quality/CMakeLists.txt
+++ b/examples/quality/CMakeLists.txt
@@ -17,4 +17,9 @@ dune_target_enable_all_packages(gmsh2dgf)
 set_property(TARGET gmsh2dgf APPEND PROPERTY LINK_LIBRARIES dunealugrid)
 target_compile_definitions(gmsh2dgf PUBLIC "ALUGRID_SIMPLEX" "GRIDDIM=3" "WORLDDIM=3")
 
+add_executable(estclo estimate-closure.cc)
+dune_target_enable_all_packages(estclo)
+set_property(TARGET estclo APPEND PROPERTY LINK_LIBRARIES dunealugrid)
+target_compile_definitions(estclo PUBLIC "ALUGRID_CONFORM" "GRIDDIM=3" "WORLDDIM=3")
+
 install(FILES ${examples_HEADERS} DESTINATION ${examplesdir})
