--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,9 @@ add_subdirectory(lib)
 add_subdirectory(examples EXCLUDE_FROM_ALL)
 add_subdirectory(utils)
 
-if(dune-corepy_FOUND)
+if(dune-python_FOUND)
+  add_subdirectory(python)
+elseif(dune-corepy_FOUND)
   add_subdirectory(python)
   if(NOT (${DUNE_COMMON_VERSION} VERSION_LESS 2.6))
     dune_python_install_package(PATH "python")
