[bugfix] also install dune-alugrid, when dune-python is used
Former-commit-id: 2564c61580f48609edad0f37170e094901920a88

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory(utils)
 
 if(dune-python_FOUND)
   add_subdirectory(python)
+  dune_python_install_package(PATH "python")
 elseif(dune-corepy_FOUND)
   add_subdirectory(python)
   if(NOT (${DUNE_COMMON_VERSION} VERSION_LESS 2.6))
