--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -3,7 +3,7 @@ from setuptools import setup, find_packages
 setup(name="dune.alugrid",
     namespace_packages=['dune'],
     description="Python lib for dune: dune-alugrid library",
-    version="2.5",
+    version="${DUNE_PYTHON_VERSION}",
     author="Andreas Dedner and Martin Nolte",
     packages = find_packages(),
     zip_safe = 0,
