[bugfix][GridSelector] Write ALUGrid grid defs to separate file to avoid dependencies of the library to all headers (cmake problem). For all other downstream modules the grid selection is still written to config.h
Former-commit-id: b65868a51bc69f02eff3932ba1535cf3156306d6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project("dune-alugrid" C CXX)
 set(BUILD_DOCS 1)
 set(DUNE_REENABLE_ADD_TEST TRUE)
 
+# grid selector in separate file to avoid excessive dependencies
+set(ALUGRID_EXTRA_GRIDSELECTOR_FILE TRUE)
+
 # general stuff
 cmake_minimum_required(VERSION 2.8.12)
 
