[bugfix][METIS] disable METIS by default unless -DALUGRID_DISABLE_METIS=FALSE is specified.
Former-commit-id: a779f544e4cc4eb393dbe150c4ebfbe41e449963

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(DUNE_REENABLE_ADD_TEST TRUE)
 
 # grid selector in separate file to avoid excessive dependencies
 set(ALUGRID_EXTRA_GRIDSELECTOR_FILE TRUE)
+set(ALUGRID_DISABLE_METIS TRUE)
 
 # general stuff
 cmake_minimum_required(VERSION 2.8.12)
