[cmake][bugfix] Only call python macros if dune-python was found
dune-alugrid currently only sugggests dune-python, but uses CMake
functionality provided by dune-python unconditionally. The patch
guards those calls with the correct cmake variable.


Former-commit-id: 0fe603352b062cec4263ff8e0775058eff73b1fe

--- a/python/dune/CMakeLists.txt
+++ b/python/dune/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_subdirectory(alugrid)
 
-add_python_targets(dune
-  __init__
-)
+if(dune-python_FOUND)
+  add_python_targets(dune
+    __init__
+  )
+endif()
