--- a/python/dune/alugrid/CMakeLists.txt
+++ b/python/dune/alugrid/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_python_targets(alugrid
-  __init__
-  _grids
-)
+if(dune-python_FOUND)
+  add_python_targets(alugrid
+    __init__
+    _grids
+  )
+endif()
