[bugfix][StructuredGridFactory] Make structured grid factory work for ALUGridCube.
Former-commit-id: ef4b61000a46f35a47ca11d84f9e0f72063006b8

--- a/dune/alugrid/test/CMakeLists.txt
+++ b/dune/alugrid/test/CMakeLists.txt
@@ -2,6 +2,7 @@ set(TESTS
   test-alugrid
   test-adaptivity
   test-fromtogridfactory
+  test-structuredgridfactory
   test-twists
   test-hierarchic
   test-ball-projection
