[gmsh] add a Gmsh test
Copy and adapt the Gmsh test from dune-grid.


Former-commit-id: 29ea24249791a8561eb62c485e1d9d57e2c66990

--- a/dune/alugrid/test/CMakeLists.txt
+++ b/dune/alugrid/test/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TESTS
   test-hierarchic
   test-ball-projection
   test-backup-restore
+  test-gmsh
 )
 
 foreach(TEST ${TESTS})
@@ -14,3 +15,4 @@ foreach(TEST ${TESTS})
 endforeach()
 
 add_subdirectory(dgf)
+add_subdirectory(gmsh)
