--- a/python/setup.py.in
+++ b/python/setup.py.in
@@ -4,7 +4,7 @@ setup(name="dune.alugrid",
     namespace_packages=['dune'],
     description="Python lib for dune: dune-alugrid library",
     version="${DUNE_PYTHON_VERSION}",
-    author="Andreas Dedner and Martin Nolte",
+    author="Robert Kloefkorn, Martin Alkaemper, Andreas Dedner and Martin Nolte",
     packages = find_packages(),
     zip_safe = 0,
     package_data = {'': ['*.so']}
