move topology mapping implementation out of header
This avoids compiler warnings about declared but not defined static
members.


Former-commit-id: a5f7031e7d2d48140d49275343d62797b9162e28

--- a/dune/alugrid/3d/CMakeLists.txt
+++ b/dune/alugrid/3d/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(alu3dgriddir  ${CMAKE_INSTALL_INCLUDEDIR}/dune/alugrid/3d)
 set(alu3dgrid_HEADERS  alu3dinclude.hh communication.hh
   datacollectorcaps.hh datahandle.hh grid.hh grid_imp.cc grid_inline.hh
-  mappings.hh mappings_imp.cc topology.hh
+  mappings.hh mappings_imp.cc topology.hh topology.cc
   entity.hh entity_imp.cc entity_inline.hh entityseed.hh
   faceutility.hh faceutility_imp.cc geometry.hh geometry_imp.cc
         gridfactory.hh gridfactory.cc gridview.hh
