--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 ---
 before_script:
-  - duneci-install-module https://gitlab.dune-project.org/core/dune-common.git
-  - duneci-install-module https://gitlab.dune-project.org/core/dune-geometry.git
-  - duneci-install-module https://gitlab.dune-project.org/core/dune-grid.git
+  - DUNECI_BRANCH_AUTO=0 duneci-install-module -b releases/2.6 https://gitlab.dune-project.org/core/dune-common.git
+  - DUNECI_BRANCH_AUTO=0 duneci-install-module -b releases/2.6  https://gitlab.dune-project.org/core/dune-geometry.git
+  - DUNECI_BRANCH_AUTO=0 duneci-install-module -b releases/2.6  https://gitlab.dune-project.org/core/dune-grid.git
 
 debian:10  gcc:c++17:
   image: duneci/base:10
