[bugfix][PeriodicBnd] added check (kudos to T.Koch) and a fix for insertion of periodic boundaries (kudos M. Alkaemper).
Former-commit-id: 83ff1e5f59756190c88314d1297944778a5e78fd

--- a/dune/alugrid/test/dgf/CMakeLists.txt
+++ b/dune/alugrid/test/dgf/CMakeLists.txt
@@ -4,6 +4,7 @@ set(DGFS
   cube-testgrid-2-2.dgf
   cube-testgrid-2-3.dgf
   grid2d_str1d.dgf
+  periodic.dgf
   simplex-testgrid-2-2.dgf
   simplex-testgrid-2-3.dgf
   simplex-testgrid-3-3.dgf
